# swiss-transportation-mcp

./: .gitignore  Cargo.toml  README.md
examples/: tool_calls.json
src/: cache.rs  config.rs  main.rs  mcp.rs  models.rs  nl.rs  service.rs
src/api/: formation.rs  gtfs_realtime.rs  gtfs_rt.rs  mod.rs  ojp.rs
