[package]
name = "swiss-transport-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
prost = "0.14"
quick-xml = "0.38"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
structopt = "0.3"
tokio = { version = "1.48", features = ["full"] }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
